cmake_minimum_required(VERSION 3.12)
project(POO)

set(CMAKE_CXX_STANDARD 14)

add_executable(Annales_POO "Annales POO/2015-2016/main.cpp" "Annales POO/2015-2016/BinaryCode.cpp" "Annales POO/2015-2016/BinaryCode.h" "Annales POO/2015-2016/Tableau.cpp" "Annales POO/2015-2016/Tableau.h" "Annales POO/2015-2016/SimpleListe.h" "Annales POO/2015-2016/Pile.h")

